<resources>
    <string name="app_name">WaterTracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drops_water_tracker">Drops Water Tracker</string>
    <string name="stay_hydrated_and_track_your_daily_water_intake">Stay hydrated and track your \ndaily water intake</string>
    <string name="track_your_daily_water_intake_with_us">Track your daily water \nintake with Us.</string>
    <string name="achieve_your_hydration_goals_with_a_simple_tap">Achieve your hydration goals with a simple \ntap!</string>
    <string name="next">Next</string>
    <string name="smart_reminders_tailored_to_you">Smart Reminders \nTailored to You</string>
    <string name="quick_and_easy_to_set_your_hydration_goal_and_then_track_your_daily_water_intake_progress">Quick and easy to set your hydration goal and then track your daily water intake progress.</string>
    <string name="easy_to_use_drink_tap_repeat">Easy to Use – Drink, Tap, \nRepeat</string>
    <string name="staying_hydrated_every_day_is_easy_with_drops_water_tracker">Staying hydrated every day is easy with \nDrops Water Tracker.</string>
    <string name="get_started">Get Started</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="first_name">First name</string>
    <string name="welcome">Welcome!</string>
    <string name="add_your_goal">Add Your Goal</string>
    <string name="_09_30">09:30</string>
    <string name="_100_ml">100 ml</string>
    <string name="_10">10%</string>
    <string name="target">Target</string>
    <string name="_2000ml">2000ml</string>
    <string name="go_to_dashboard">Go to Dashboard</string>
    <string name="you_got_50_of_today_s_goal_keep_focus_on_your_health">You got 50% of today’s goal, keep \nfocus on your health!</string>
    <string name="for_today">For Today</string>
    <string name="water">Water</string>
    <string name="_2_1_liters">2.1 liters</string>
    <string name="hours">hours</string>
    <string name="_08_00">08:00</string>
    <string name="walk">Walk</string>
    <string name="sleep">Sleep</string>
    <string name="_510_43">510.43</string>
    <string name="kcal">Kcal</string>
</resources>