<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".EntranceSliderThreeFragment">

    <ImageView
        android:id="@+id/drinkWaterImgThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/bottle_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="200dp"/>

    <TextView
        android:id="@+id/mainText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/easy_to_use_drink_tap_repeat"
        android:fontFamily="@font/poppinsbold"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/drinkWaterImgThree"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/subText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/staying_hydrated_every_day_is_easy_with_drops_water_tracker"
        android:fontFamily="@font/poppinsregular"
        android:textSize="10sp"
        app:layout_constraintTop_toBottomOf="@id/mainText"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="#625D5D"
        app:layout_constraintStart_toStartOf="parent"
        android:textAlignment="center"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:id="@+id/indicatorLayoutTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/subText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/dot1"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_margin="4dp"
            android:src="@drawable/dot_unselected"/>

        <ImageView
            android:id="@+id/dot2"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_margin="4dp"
            android:src="@drawable/dot_unselected"/>

        <ImageView
            android:id="@+id/dot3"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_margin="4dp"
            android:src="@drawable/dot_selected"/>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/get_started"
        android:textSize="14sp"
        android:fontFamily="@font/poppinsbold"
        android:backgroundTint="#5DCCFC"
        app:cornerRadius="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="40dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
