<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".EntranceSliderTwoFragment">


    <ImageView
        android:id="@+id/drinkWaterImgTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/drinkwater_slide2_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="200dp"/>

    <TextView
        android:id="@+id/mainText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/smart_reminders_tailored_to_you"
        android:fontFamily="@font/poppinsbold"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/drinkWaterImgTwo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/subText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quick_and_easy_to_set_your_hydration_goal_and_then_track_your_daily_water_intake_progress"
        android:fontFamily="@font/poppinsregular"
        android:textSize="10sp"
        app:layout_constraintTop_toBottomOf="@id/mainText"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="#625D5D"
        app:layout_constraintStart_toStartOf="parent"
        android:textAlignment="center"
        android:layout_marginTop="10dp"/>

    <!-- Indicator Dots -->
    <LinearLayout
        android:id="@+id/indicatorLayoutTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/subText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/dot1"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_margin="4dp"
            android:src="@drawable/dot_unselected"/>

        <ImageView
            android:id="@+id/dot2"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_margin="4dp"
            android:src="@drawable/dot_selected"/>

        <ImageView
            android:id="@+id/dot3"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_margin="4dp"
            android:src="@drawable/dot_unselected"/>
    </LinearLayout>

    <!-- Next Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/nextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textSize="14sp"
        android:fontFamily="@font/poppinsbold"
        android:backgroundTint="#5DCCFC"
        app:cornerRadius="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="40dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
