<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AnalysisFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="15dp" />

    <TextView
        android:id="@+id/forTodayText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/for_today"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/waterAnalysis"
        android:layout_width="154dp"
        android:layout_height="236dp"
        android:layout_marginTop="15dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/forTodayText" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/waterAnalysisContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent">




            <TextView
                android:id="@+id/waterText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/water"
                android:textSize="18sp"
                android:fontFamily="@font/poppinsbold"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="parent"
               />

            <FrameLayout
                android:id="@+id/waveContainer"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_alignParentBottom="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <ImageView
                    android:id="@+id/wave1"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:layout_gravity="bottom"
                    android:alpha="0.9"
                    android:scaleType="fitXY"
                    android:src="@drawable/water_wave2"
                    app:tint="#5DCCFC" />

                <ImageView
                    android:id="@+id/wave2"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:layout_gravity="bottom"
                    android:scaleType="fitXY"
                    android:src="@drawable/water_wave1"
                    app:tint="#08ABFF" />



            </FrameLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2_1_liters"
                android:textSize="18sp"
                android:fontFamily="@font/poppinsbold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="55dp">

            </TextView>



        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/stepCounter"
        android:layout_width="154dp"
        android:layout_height="236dp"
        android:layout_marginTop="54dp"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:layout_constraintStart_toEndOf="@id/waterAnalysis"
        app:layout_constraintTop_toTopOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/stepCounterContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/walk_card"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toTopOf="parent">

</ImageView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>



    <androidx.cardview.widget.CardView
        android:id="@+id/caloriesCounter"
        android:layout_width="154dp"
        android:layout_height="161dp"
        android:layout_marginTop="14dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/waterAnalysis">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/caloriesCounterContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/caloriesText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Calories"
                android:fontFamily="@font/poppinsbold"
                android:textSize="18sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="15dp"
                android:layout_marginStart="20dp">


            </TextView>
            <TextView
                android:id="@+id/calorieNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_510_43"
                android:textColor="#5DCCFC"
                app:layout_constraintTop_toBottomOf="@id/caloriesText"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="25sp"
                android:fontFamily="@font/poppinsbold"
                android:layout_marginStart="17dp"
                android:layout_marginTop="30dp">


            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kcal"
                app:layout_constraintTop_toBottomOf="@+id/calorieNumber"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="14sp"
                android:fontFamily="@font/poppinsbold"
                android:layout_marginStart="20dp"
                android:layout_marginTop="-15dp">

            </TextView>



        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>



    <androidx.cardview.widget.CardView
        android:id="@+id/sleepCounter"
        android:layout_width="154dp"
        android:layout_height="161dp"
        android:layout_marginTop="14dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/caloriesCounter">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sleepCounterContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/sleepText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sleep"
                android:textSize="18sp"
                android:fontFamily="@font/poppinsbold"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </TextView>

                <TextView
                    android:id="@+id/clockText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_08_00"
                    android:fontFamily="@font/poppinsbold"
                    android:textColor="#5DCCFC"
                    android:textSize="25sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/sleepText"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="14dp">

                </TextView>

            <TextView
                android:id="@+id/hoursText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hours"
                android:fontFamily="@font/poppinsbold"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/clockText"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="-15dp"
                android:layout_marginStart="15dp">

            </TextView>



        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>



    <androidx.cardview.widget.CardView
        android:id="@+id/heartBPM"
        android:layout_width="154dp"
        android:layout_height="336dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="35dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/stepCounter">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/heart_card"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:scaleType="fitCenter">

            </ImageView>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/white"
        app:itemIconSize="24dp"
        app:itemTextAppearanceActive="@style/BottomNavigationText.Active"
        app:itemTextAppearanceInactive="@style/BottomNavigationText.Inactive"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/navGuideline"
        app:menu="@menu/bottom_nav_menu" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_clock"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/white"
        android:src="@drawable/ic_clock"
        app:fabCustomSize="54dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/navGuideline"
        app:tint="@color/black" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/navGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="646dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="395dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
